# rocket-sdk-rust

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: error.rs  lib.rs
src/client/: error.rs  mod.rs  rest.rs  ws.rs
src/endpoints/: mod.rs
src/example/: mod.rs
src/macros/: mod.rs
src/sign/: error.rs  mod.rs
src/types/: mod.rs
src/types/primitives/: account_address.rs  aliases.rs  asset.rs  candle.rs  constansts.rs  constants.rs  instrument.rs  instrument_id.rs  mod.rs  order.rs
src/types/rest/: account_fees.rs  account_nonce.rs  assets.rs  bridge_events.rs  candles.rs  collateral.rs  faucet_claim.rs  fees.rs  funding_rate_events.rs  instruments.rs  max_leverage.rs  mod.rs  open_orders.rs  order_events.rs  pagination.rs  position.rs  position_funding_events.rs  vault_history.rs  vault_stats.rs  vaults.rs
src/types/rest/transaction/: response.rs
src/types/transaction/: error.rs  mod.rs  sign.rs  signature.rs
src/types/transaction/instruction/: delegate_manager.rs  delist_instrument.rs  faucet_claim.rs  fee.rs  list_asset.rs  list_instrument.rs  mint.rs  mod.rs  oracle.rs  order.rs  proposal.rs  set_is_trading.rs  set_leverage.rs  set_main_vault_data.rs  vault.rs  withdraw.rs
src/types/transaction/response/: mod.rs  oracle_settings.rs  order.rs
src/types/views/: account_fees.rs  account_risk.rs  assets.rs  bridge_event.rs  candle.rs  collateral.rs  funding_rate.rs  global_fees.rs  instrument.rs  instrument_stats.rs  mark_price.rs  mod.rs  open_order.rs  order_event.rs  orderbook.rs  position.rs  position_funding_events.rs  quote.rs  vault.rs  vault_history.rs  vault_stats.rs
src/types/ws/: client_message.rs  mod.rs  server_message.rs  subscription_kind.rs
