[package]
name = "rocket-chain-sdk"
version = "0.1.0"
edition = "2021"
license = "TODO"
description = "Rust SDK for Rocket Chain"
repository = "https://github.com/rocketfoundation/rocket-sdk-rust"
documentation = "https://github.com/rocketfoundation/rocket-sdk-rust"
homepage = "https://github.com/rocketfoundation/rocket-sdk-rust"
readme = "README.md"
keywords = ["sdk", "api", "rocket", "rocketchain"]
categories = ["api-bindings", "finance", ]

[lib]
name = "rocket_chain_sdk"
path = "src/lib.rs"

[features]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
alloy-primitives = { version = "1", features = ["serde"] }
hex = { version = "0.4.3" }
